# engine

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README  README.md  build.sh  cinclude2dot_include.txt  cmake.sh  config.sh  copytestgame.sh  create_class.sh  deps.sh  game_clean.sh  idea.txt  idea_space.txt  imgui_example.sh  include_graph.sh  launch.sh  readme.md
.github/workflows/: ccpp.yml  tests.yml  ubuntu.yml
apps/: engine.cpp  engine.h  engine0.cpp  engine1.cpp  engine2.cpp  engine_globals.h  example.cpp
game0/: glEnable_settings.json  gl_settings.json
game0/shaders/: t.glsl  test.frag  test.vert
games/game0/shaders/: test.frag  test.geo  test.vert
images/: lapse0_movie_loosy.gif.REMOVED.git-id
libs/: CMakeLists.txt
libs/apps/: engine.cpp
libs/apps/catch/: file.cpp  file_test.cpp  gameobject_test.cpp  main_test.cpp  scene.cpp  scene_test.cpp  template.cpp
libs/apps/engine/: engine.cpp  engine_globals.h  main.cpp
libs/include/: _assets.h  assets.h  components.h  config.h.in  engine_globals.h  engine_scene.h  gameobject.h  gl_helper.h  idraw.h  inotify_imp.h  irenderable.h  my_filesystem.h  prefab.h  serialize.h
libs/include/assets/: _assets.h  assets.h  gameobject.h  scene.h
libs/include/components/: camera.h  component.h  components.h  mesh.h  source.h  transform.h
libs/include/glad/: glad.h
libs/include/groups/: debug.h  gl.h  gl_group.h  helper.h  my_filesystem.h  my_imgui.h  type_name.h
libs/include/helper/: _audio.h  cereal_glm.h  cereal_glmvec3.h  component.h  file.h  idraw.h  inotify_imp.h  map_helper.h  referentiable.h
libs/include/menus/: imgui_engine.h  menus.h
libs/include/rendering/: _rendering.h  gl_helper.h  mesh.h  program.h  rendering.h  texture.h
libs/src/: assets.cpp  assets_import.cpp  assets_inotify.cpp  gl_helper.cpp  glad.c  inotify_imp.cpp  serialize.cpp  type_name.cpp
libs/src/assets/: _assets.h  assets.cpp  assets_import.cpp  gameobject.cpp  scene.cpp
libs/src/components/: camera.cpp  source.cpp  transform.cpp
libs/src/engine/: _engine.h  engine.cpp
libs/src/helper/: component.cpp  file.cpp  referentiable.cpp
libs/src/menus/: _menus.h  files.cpp  imgui_engine.cpp  inspector.cpp  main_menu.cpp  menus.cpp  menus_gl.cpp  stats.cpp  text_editor.cpp
libs/src/rendering/: _rendering.h  gl_helper.cpp  mesh.cpp  program.cpp  texture.cpp
misc/: cinclude2dot_include.txt  idea.txt
misc/docs/: compiling.md  manifesto.md  manifesto2.md
misc/graph/: cinclude2dot_include.txt  source.dot
scripts/: create_class.sh  deps.sh  include_graph.sh
src/: main.cpp  main_test.cpp
src/libs/: CMakeLists.txt
src/libs/include/: config.h.in  engine_globals.h  engine_scene.h  imgui_helper.h  prefab.h
src/libs/include/assets/: assets.h  gameobject.h  scene.h
src/libs/include/components/: camera.h  source.h  transform.h
src/libs/include/groups/: debug.h  helper.h  my_filesystem.h  my_imgui.h
src/libs/include/helper/: _audio.h  _factory.h  component.h  factory.h  file.h  idraw.h  imgui_helper.h  inotify_imp.h  itype.h  macros.h  map_helper.h  referentiable.h  types.h
src/libs/include/menus/: menus.h
src/libs/include/rendering/: attribute.h  mesh.h  program.h  shader.h  texture.h  vao.h
src/libs/src/: imgui_helper.cpp  serialize2.cpp
src/libs/src/assets/: _assets.h  assets.cpp  assets_import.cpp  gameobject.cpp  scene.cpp
src/libs/src/components/: audio.c  audio.h  camera.cpp  source.cpp  transform.cpp
src/libs/src/engine/: _engine.h  engine.cpp
src/libs/src/helper/: component.cpp  factory.cpp  file.cpp  imgui_helper.cpp  inotify_imp.cpp  referentiable.cpp  type_name.cpp
src/libs/src/menus/: _menus.h  files.cpp  inspector.cpp  menus.cpp  menus_gl.cpp  stats.cpp  text_editor.cpp
src/libs/src/rendering/: _rendering.h  attribute.cpp  mesh.cpp  program.cpp  shader.cpp  texture.cpp  vao.cpp
src/libs/templates/: template.cpp  template.h
templates/: template.cpp
